<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.binar.secondhand.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_jual"
        android:name="com.binar.secondhand.ui.jual.JualFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_jual" />

    <fragment
        android:id="@+id/navigation_notif"
        android:name="com.binar.secondhand.ui.notifications.NotifFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.binar.secondhand.ui.productlist.ProductListFragment"
        android:label="@string/daftar_jual"
        tools:layout="@layout/fragment_product_list">
        <action
            android:id="@+id/action_navigation_list_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.binar.secondhand.ui.akun.AkunFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_akun" >
        <action
            android:id="@+id/action_navigation_akun_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_akun_to_changePassFragment"
            app:destination="@id/changePassFragment" />
        <action
            android:id="@+id/action_navigation_akun_to_ubahAkunFragment"
            app:destination="@id/ubahAkunFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.binar.secondhand.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="item_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.binar.secondhand.ui.auth.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.binar.secondhand.ui.auth.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/changePassFragment"
        android:name="com.binar.secondhand.ui.akun.change_pass.ChangePassFragment"
        android:label="fragment_change_pass"
        tools:layout="@layout/fragment_change_pass" />
    <fragment
        android:id="@+id/ubahAkunFragment"
        android:name="com.binar.secondhand.ui.akun.edit_akun.UbahAkunFragment"
        android:label="fragment_ubah_akun"
        tools:layout="@layout/fragment_ubah_akun" />

</navigation>